--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<body>
 			<img border="0" src="https://jenkins-x.io/images/logo.png" width="300" height="300" />
-			<h2>Current time is what?</h2>
+			<h2>Current time is 9:02</h2>
 </div>
 	</body>
 </html>
