--- a/server/public/index.html
+++ b/server/public/index.html
@@ -17,15 +17,13 @@
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-
       function gtag() {
         dataLayer.push(arguments);
       }
-
       gtag("js", new Date());
-
       gtag("config", "UA-107675518-1");
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <style>
       * {
         margin: 0;
@@ -35,7 +33,7 @@
       body {
         width: 100vw;
         height: 100vh;
-        background: url("../assets/background.jpg") no-repeat center center;
+        background: url("background.jpg") no-repeat center center;
         background-size: cover;
       }
 
